Update dark mode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./src/css/scrollbar.css">
 </head>
 
-<body>
+<body class="imagem-fundo">
     <header>
         <a href="#">
             <img src="./src/imagens/mortal_kombat_logo.png" alt="mortal_kombat_logo" class="logo" />
